tests/snapshots/runtime_error_fixtures/boundary_arg_string_into_int.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/boundary_arg_string_into_int.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 8] Compiling  Assert
[2 of 8] Compiling  IO
[3 of 8] Compiling  List
[4 of 8] Compiling  Numeric
[5 of 8] Compiling  Option
[6 of 8] Compiling  String
[7 of 8] Compiling  BoundaryUnknown
• 1 error • examples/runtime_errors/boundary_arg_string_into_int.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `typed_add`.

  examples/runtime_errors/boundary_arg_string_into_int.flx:8:11
  |
3 | fn typed_add(a: Int, b: Int) -> Int {
4 |     a + b
5 | }
6 |
7 | let dynamic = RuntimeErrors.BoundaryUnknown.dynamic_string()
8 | typed_add(dynamic, 1)
  |           ^^^^^^^
  |           ------- this argument has type `String`

Note:
  expected argument type: Int
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Int` value as the 1st argument.
== jit ==
status: 1
stdout:
<empty>
stderr:
[1 of 8] Compiling  Assert
[2 of 8] Compiling  IO
[3 of 8] Compiling  List
[4 of 8] Compiling  Numeric
[5 of 8] Compiling  Option
[6 of 8] Compiling  String
[7 of 8] Compiling  BoundaryUnknown
• 1 error • examples/runtime_errors/boundary_arg_string_into_int.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `typed_add`.

  examples/runtime_errors/boundary_arg_string_into_int.flx:8:11
  |
3 | fn typed_add(a: Int, b: Int) -> Int {
4 |     a + b
5 | }
6 |
7 | let dynamic = RuntimeErrors.BoundaryUnknown.dynamic_string()
8 | typed_add(dynamic, 1)
  |           ^^^^^^^
  |           ------- this argument has type `String`

Note:
  expected argument type: Int
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Int` value as the 1st argument.
